--- a/src/Basic Components/Button/button.css
+++ b/src/Basic Components/Button/button.css
@@ -1,6 +1,6 @@
 .btn{
     padding: 10px 20px;
     margin: 10px;
-    background-color: gainsboro;
+    background-color: rgb(149, 85, 85);
     color: black;
 }
