--- a/src/Basic Components/Form/form.css
+++ b/src/Basic Components/Form/form.css
@@ -6,5 +6,5 @@ form{
     padding: 20px;
     border: solid 1px #ccc;
     border-radius: 8px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: sans-serif;
 }
