--- a/src/Counter/conunter.css
+++ b/src/Counter/conunter.css
@@ -11,4 +11,10 @@ button{
     padding: 5px 8px;
     background-color: gainsboro;
     border: navy;
+    cursor: pointer;
+    width: 100px;
+    border-radius: 5px;
+}
+.count{
+    padding: 10px;
 }
